# advent-of-code

./: .dccache  .gitignore  pyproject.toml
2021/day1/part-2/: sonar-sweep-part-2.py
2021/day4/part-1/: bingo.py
2021/day4/part-2/: bingo.py
2021/day5/part-2/: hydrothermal_vents.py
2022/day1/part1/: count_calories.py
2022/day1/part2/: count_calories.py
2022/day10/: cathode_ray_tube.py
2022/day11/: monkey_business.py
2022/day2/part1/: rps.py
2022/day2/part2/: rps.py
2022/day3/part1/: rucksack.py  test_rucksack.py
2022/day3/part2/: rucksack.py  test_rucksack.py
2022/day4/part1/: camp_cleanup.py
2022/day4/part2/: camp_cleanup.py
2022/day5/part1/: stacks.py
2022/day5/part2/: stacks.py
2022/day6/: buffer.py
2022/day7/: no_space.py
2022/day8/: tree_house.py
2022/day9/: rope_bridge.py
day1/: .dccache
day1/part-1/: sonar-sweep-part-1.py
day2/part-1/: submarine-positioning.py
day2/part-2/: submarine-positioning.py
day3/part-1/: binary-diagnostic.py
day3/part-2/: binary-diagnostic.py
day4/: bingo.py
day6/part-1/: lanternfish.py
day6/part-2/: lanternfish.py
