[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Miles Winther's solutions to Advent of Code"
authors = ["Miles Winther <42948872+mmwinther@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "^3.10"
parse = "^1.19.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
